# api.yaml
@@ -143,10 +143,13 @@ paths:
       summary: Register a new patient
       description: Creates a new patient record
       consumes:
-        - application/json
-      produces:
+        - multipart/form-data   # Specify that the endpoint accepts multipart form data
         - application/json
       parameters:
+        - in: formData
+          name: photo
+          description: The file to upload
+          type: file
         - in: body
           name: patient
           description: Patient registration data
@@ -430,9 +433,6 @@ definitions:
       dob:
         type: string
         format: date
-      image:
-        type: string
-        example: https://domain/encryptions/folder/image_name
       contact:
         type: number
         default: 123456789
